Pull in changes (3.2.41.x)

--- a/geogebra/properties/command_ca.properties
+++ b/geogebra/properties/command_ca.properties
@@ -34,7 +34,7 @@ AxisStepYSyntax=PasEixX[]
 BarChart=GràficdeBarres
 BarChartSyntax=GràficdeBarres[ <Llista de Dades>, <Llista de Freqüències> ] \n\
 		GràficdeBarres[ <Llista de Dades>, <Llista de Freqüències>, <Amplada de les Barres> ] \n\
-		GràficdeBarres[ <Llista de Totes les Dades>, <Amplada de la Classe> ] \n\
+		GràficdeBarres[ <Llista de Totes les Dades>, <Amplada de les Classes> ] \n\
 		GràficdeBarres[<Valor Inicial>, <Valor Final>, <Llista de les Altures> ] \n\
 		GràficdeBarres[ <Valor Inicial>, <Valor Final>, <Expressió>, <Variable>, <Des del Nombre>, <Fins al Nombre>] \n\
 		GràficdeBarres[ <Valor Inicial>, <Valor Final>, <Expressió>, <Variable>, <Des del Nombre>, <Fins al Nombre>, <Amplada del Pas>] \n\
@@ -106,8 +106,8 @@ DeterminantSyntax=Determinant[ <Matriu> ]
 Diameter=Diàmetre
 DiameterSyntax=Diàmetre[ <Vector> , <Cònica> ]\n\
 		Diàmetre[ <Recta> , <Cònica> ]
-Dilate=Homotècia
-DilateSyntax=Homotècia[ <Objecte> , <Raó> , <Punt> ]
+Dilate=Homotecia
+DilateSyntax=Homotecia[ <Objecte> , <Raó> , <Punt> ]
 Direction=Direcció
 DirectionSyntax=Direcció[ <Recta> ]
 Directrix=Directriu
@@ -204,9 +204,9 @@ KeepIfSyntax=TriaSi[ <Condició>, <Llista> ]
 LCM=MCM
 LCMSyntax=MCM[ <Nombre>, <Nombre> ]\n\
 		MCM[ <Llista de Nombres> ]
-LaTeX=LaTeX
-LaTeXSyntax=LaTeX[ <Objecte> ]\n\
-		LaTeX[ <Objecte>, <Booleana per Substitució de Variables> ]
+LaTeX=FórmulaText
+LaTeXSyntax=FórmulaText[ <Objecte> ]\\nFórmulaText[ <Objecte>, <Booleana per Substitució de Variables> ]\n\
+		
 Last=Últim
 LastSyntax=Últim[ <Llista> , <Nombre d'Elements> ]
 Length=Longitud
@@ -405,7 +405,10 @@ TangentSyntax=Tangent[ <Punt> , <Cònica> ]\n\
 		Tangent[ <Punt> , <Funció> ]
 TaylorSeries=PolinomiDeTaylor
 TaylorSeriesSyntax=PolinomiDeTaylor[ <Funció> , <Nombre> , <Nombre> ]
-Text=
+# Text=Text
+# SintaxiText=Text[ <Objecte> ]
+# substituir amb
+Text=Text
 TextSyntax=Text[ <Objecte> ]\n\
 		Text[ <Objecte>, <Booleana per a Substitució de Variables> ]\n\
 		Text[ <Objecte>, <Punt> ]\n\
