--- a/geogebra/properties/command_da.properties
+++ b/geogebra/properties/command_da.properties
@@ -74,8 +74,8 @@ ColumnName=SøjleNavn
 ColumnNameSyntax=SøjleNavn[ <celle>]
 ColumnSyntax=Søjle[ <celle>]
 Command=Kommando
-Conic=Konisk
-ConicSyntax=Konisk[ <Punkt1>, <Punkt2>, <Punkt3>, <Punkt4>, <Punkt5> ]
+Conic=Keglesnit
+ConicSyntax=Keglesnit[ <Punkt1>, <Punkt2>, <Punkt3>, <Punkt4>, <Punkt5> ]
 ConstructionStep=Konstruktionstrin
 ConstructionStepSyntax=Konstruktionstrin[]\n\
 		Konstruktionstrin[<Objekt>]
