--- a/geogebra/properties/command_nl.properties
+++ b/geogebra/properties/command_nl.properties
@@ -288,9 +288,9 @@ OrthogonalLineSyntax=Loodlijn[ <Punt>, <Rechte> ]\n\
 OrthogonalVector=Normaalvector
 OrthogonalVectorSyntax=Normaalvector[ <Rechte> ]\n\
 		Normaalvector[ <Vector> ]
-OsculatingCircle=OsculerendeCirkel
-OsculatingCircleSyntax=OsculerendeCirkel[ <Punt>, <Functie> ]\n\
-		OsculerendeCirkel[ <Punt>, <Kromme> ]
+OsculatingCircle=Osculatiecirkel
+OsculatingCircleSyntax=Osculatiecirkel[ <Punt>, <Functie> ]\n\
+		Osculatiecirkel[ <Punt>, <Kromme> ]
 Parabola=Parabool
 ParabolaSyntax=Parabool[ <Punt>, <Rechte> ]
 Parameter=Parameter
