--- a/geogebra/properties/command_sq.properties
+++ b/geogebra/properties/command_sq.properties
@@ -29,7 +29,7 @@ AsymptoteSyntax=Syprine[ <Pike>, ..., <Pike> ]\n\
 Axes=Boshte
 AxesSyntax=Boshte[ <Konike> ]
 AxisStepX=HapiBoshtorX
-AxisStepXSyntax=\ HapiBoshtorX[]
+AxisStepXSyntax=HapiBoshtorX[]
 AxisStepY=HapiBoshtorY
 AxisStepYSyntax=HapiBoshtorY[]
 BarChart=DiagrameShtylle
@@ -71,7 +71,7 @@ ColumnNameSyntax=EmerKolone[ <Qeliza e Faqes se hapur> ]
 ColumnSyntax=Kolone[ <Qeliza e Faqes se hapur> ]
 Command=Komande
 Conic=Konike
-ConicSyntax=Konike[ <Pike>, <Pike>, <Pike>, <Pike>, <Pike>\ 
+ConicSyntax=Konike[ <Pike>, <Pike>, <Pike>, <Pike>, <Pike>
 ConstructionStep=HapNdertimi
 ConstructionStepSyntax=HapNdertimi[ <Objekt> ]
 Corner=Qoshe
@@ -79,7 +79,7 @@ CornerSyntax=Qoshe[ <Imazh>, <Numri i Qoshes> ]\n\
 		Qoshe[ <Tekst>, <Numri i Qoshes> ]\n\
 		Qoshe[ <Numri i Qoshes> ]
 CountIf=NumeroNqs
-CountIfSyntax=NumeroNqs[ <Kondita>, <Lista>\ 
+CountIfSyntax=NumeroNqs[ <Kondita>, <Lista>
 Covariance=Kovariance
 CovarianceSyntax=Kovariance[ <Liste Numrash>, <Liste Numrash> ]\n\
 		Kovariance[ <Liste Pikash> ]
@@ -188,7 +188,7 @@ IntersectSyntax=Nderpres[ <Objekt>, <Objekt> ]\n\
 Intersection=Prerje
 IntersectionSyntax=Prerje[ <Liste>, <Liste> ]
 InverseNormal=InversNormale
-InverseNormalSyntax=InverseNormale[ <Mesatare>, < Shmangie Standarde>, <Probabilitet>\ 
+InverseNormalSyntax=InverseNormale[ <Mesatare>, < Shmangie Standarde>, <Probabilitet>
 Invert=Invertoj
 InvertSyntax=Invertoj[ <Matrice> ]
 IsInteger=NumeriPlote
