--- a/geogebra/properties/error_sq.properties
+++ b/geogebra/properties/error_sq.properties
@@ -13,7 +13,7 @@ Error=Gabim
 ExponentMustBeConstant=Cdo eksponent te jete konstant
 ExponentMustBeInteger=Cdo eksponent te jete numer i plote
 ExportJarMissing=Na vjen keq, dokumenti gjeogjebra_export.jar mungon ose eshte i korruptuarr
-FileFormatNewer=Ju lutem, beni rinovim me versionin me te ri te GjeoGjebres. Ky format dokumenti nuk mbeshtetet.\ 
+FileFormatNewer=Ju lutem, beni rinovim me versionin me te ri te GjeoGjebres. Ky format dokumenti nuk mbeshtetet.
 FileFormatUnknown=Format i panjohur dokumenti
 FileNotFound=Dokumenti nuk gjehet
 FunctionExpected=Funksion i pritur
@@ -44,7 +44,7 @@ PasteImageFailed=Na vjen keq, nuk mund te ngjitej bitmap qe nga kllipbordi(vendi
 RenameFailed=Riemertimi deshtoi
 ReplaceFailed=Ripercaktimi deshtoi
 SaveFileFailed=Ruajtja e dokumentit deshtoi
-Tool.CommandNameTaken=Emri komandes tashme eshte perdorur nga mjet tjeter.\ 
+Tool.CommandNameTaken=Emri komandes tashme eshte perdorur nga mjet tjeter.
 Tool.CreationFailed=Mjeti nuk mund te krijohej.
 Tool.DeleteUsed=Mjeti eshte perdorur ne ndertim dhe nuk mund te fshihej.
 Tool.InputNotNeeded=Objekti futes nuk nevojitet.
