--- a/geogebra/properties/javaui_vi.properties
+++ b/geogebra/properties/javaui_vi.properties
@@ -1,10 +1,10 @@
 
-FileChooser.FileChooserDetailsText=Chi ti\u1ebft
-FileChooser.acceptAllFileFilterText=T\u1ea5t c\u1ea3 t\u1eadp tin
-FileChooser.cancelButtonText=Hu\u1ef7
-FileChooser.cancelButtonToolTipText=Hu\u1ef7
-FileChooser.deleteFileButtonText=Xoá
-FileChooser.deleteFileButtonToolTipText=Xoá các t\u1eadp tin \u0111\u01b0\u1ee3c ch\u1ecdn
+FileChooser.FileChooserDetailsText=Chi ti\u1ebft t\u1eadp tin \u0111\u01b0\u1ee3c ch\u1ecdn
+FileChooser.acceptAllFileFilterText=Ch\u1ea5p nh\u1eadn t\u1ea5t c\u1ea3 t\u1eadp tin \u0111\u01b0\u1ee3c l\u1ecdc
+FileChooser.cancelButtonText=Hu\u1ef7 nút v\u0103n b\u1ea3n
+FileChooser.cancelButtonToolTipText=Hu\u1ef7 nút công c\u1ee5 v\u0103n b\u1ea3n
+FileChooser.deleteFileButtonText=Xoá t\u1eadp tin nút v\u0103n b\u1ea3n
+FileChooser.deleteFileButtonToolTipText=Xoá t\u1eadp tin nút công c\u1ee5 v\u0103n b\u1ea3n \u0111\u01b0\u1ee3c ch\u1ecdn
 FileChooser.detailsViewActionLabelText=Chi ti\u1ebft
 FileChooser.detailsViewButtonAccessibleName=Chi ti\u1ebft
 FileChooser.detailsViewButtonToolTipText=Chi ti\u1ebft
@@ -52,6 +52,6 @@ FileChooser.saveInLabelText=L\u01b0u trong:
 FileChooser.sortMenuLabelText=S\u1eafp x\u1ebfp bi\u1ec3u t\u01b0\u1ee3ng theo:
 FileChooser.upFolderAccessibleName=Lên
 FileChooser.upFolderToolTipText=Lên
-FileChooser.updateButtonText=C\u1eadp nh\u1eadt
-FileChooser.updateButtonToolTipText=C\u1eadp nh\u1eadt
+FileChooser.updateButtonText=C\u1eadp nh\u1eadt v\u0103n b\u1ea3n
+FileChooser.updateButtonToolTipText=C\u1eadp nh\u1eadt công c\u1ee5
 FileChooser.viewMenuLabelText=Hi\u1ec3n th\u1ecb
