--- a/geogebra/properties/menu_ca.properties
+++ b/geogebra/properties/menu_ca.properties
@@ -144,12 +144,12 @@ Landscape=Apaïsat
 Language=Idioma
 License=Llicència
 LineBisector=Mediatriu
-LineBisector.Help=Dos punts o un segment
+LineBisector.Help=Seleccioneu dos punts o un segment
 LineMenu=Recta
 Load=Obre
 # V2.5.1 begin
 Locus=Lloc geomètric
-Locus.Help=Seleccioneu un punt del lloc geomètric i un punt d'una recta
+Locus.Help=Seleccioneu un punt del lloc geomètric i el punt generador, definit sobre una línia
 LookAndFeel=Aparença
 LowQuality=Qualitat baixa
 ManagePerspectives=Gestió d'Escenaris
