--- a/geogebra/properties/menu_da.properties
+++ b/geogebra/properties/menu_da.properties
@@ -49,14 +49,14 @@ CloseFile=Luk fil
 CmdList=Kommando liste
 CollapseAll=Luk alle
 CommandName=Kommando navn
-Compasses=Vinkelmåler
-Compasses.Help=Toppunkt og derefter afsnit eller yderligere to punkter
+Compasses=Passer
+Compasses.Help=Vælg linjestykke eller to punkter og derefter centrum
 Condition.ShowObject=Betingelse for at vise objekt
 Conditions=Betingelser
-Conic=Konisk
-Conic5=Konisk gennem fem punkter
-Conic5.Help=Klik på fem punkter på den koniske
-ConicMenu=Konisk
+Conic=Keglesnit
+Conic5=Keglesnit gennem fem punkter
+Conic5.Help=Klik på fem punkter
+ConicMenu=Keglesnit
 ConicSectionTools=Keglesnits værktøjer
 Continuity=Kontinuitet
 ConvertToCoordinates=Omskriv til koordinator
