--- a/geogebra/properties/menu_nl.properties
+++ b/geogebra/properties/menu_nl.properties
@@ -313,9 +313,9 @@ Select=Selecteer object
 Select.Help=Klik op object om het te selecteren
 # v3
 SelectAll=Alles selecteren
-SelectAncestors=Vorige lagen selecteren
-SelectCurrentLayer=Huidige laag selecteren
-SelectDescendants=Volgende lagen selecteren
+SelectAncestors=Voorouders selecteren
+SelectCurrentLayer=Huidige selecteren
+SelectDescendants=Nakomelingen selecteren
 Semicircle=Halfcirkel door twee punten
 # v3
 Semicircle.Help=Twee punten
