--- a/geogebra/properties/menu_no_NO.properties
+++ b/geogebra/properties/menu_no_NO.properties
@@ -283,7 +283,7 @@ Trace.Help=Velg objekt(er) for å  vise eller skjule spor
 TransformationTools=Verktøyer for omforminger
 TranslateByVector=Flytt objekt med vektor
 TranslateByVector.Help=Velg objekt som skal flyttes, deretter vektor
-TranslateView=Flytt grafikkfeltet\ 
+TranslateView=Flytt grafikkfeltet
 TranslateView.Help=Flytt hele grafikkfeltet eller dra i en av aksene (Shift + Flytt)
 Undo=Angre
 UserInterface=Brukergrensesnitt
