--- a/geogebra/properties/menu_ro.properties
+++ b/geogebra/properties/menu_ro.properties
@@ -29,10 +29,10 @@ CircleArcTools=Cerc \u015fi instrumente arc
 CirclePointRadius=Cerc cu centru \u015fi raz\u0103
 CirclePointRadius.Help=Selectare punctul de centru \u015fi introducere raza
 CircleSector3=Sector circular cu centrul între dou\u0103 puncte
-CircleSector3.Help=Selectare centru \u015fi dou\u0103 puncte \ 
+CircleSector3.Help=Selectare centru \u015fi dou\u0103 puncte 
 CircumcircleArc3=Arc Circumcircular prin trei puncte
 CircumcircleArc3.Help=Selectare trei puncte pe arc
-CircumcircleSector3=Sector circumcircular prin trei puncte\ 
+CircumcircleSector3=Sector circumcircular prin trei puncte
 CircumcircleSector3.Help=Selectare trei puncte pe sector
 ClearColumn=\u015etergere coloan\u0103
 ClearColumns=\u015etergere coloane
@@ -96,9 +96,9 @@ FastHelp=Ajutor rapid
 File=Fi\u015fier
 Files=Fi\u015fiere
 FitLine=Linie de regresie
-FitLine.Help=Selectare puncte folosind dreptunghiul de selec\u0163ie sau lista de puncte\ 
+FitLine.Help=Selectare puncte folosind dreptunghiul de selec\u0163ie sau lista de puncte
 Fix=Reparare Activ / Inactiv
-Fix.Help=Selectare / Deselectare obiect de reparat\ 
+Fix.Help=Selectare / Deselectare obiect de reparat
 FontSize=Dimensiune font
 Functionality=Func\u0163ionalitate
 General=General
@@ -162,7 +162,7 @@ Mode=Mod
 Motif=Motiv
 Move=Deplasare
 Move.Help=Glisare sau selectare obiecte (Esc)
-MoveRotate=Rota\u0163ie în jurul unui punct\ 
+MoveRotate=Rota\u0163ie în jurul unui punct
 MoveRotate.Help=Selectare centrul de rota\u0163ie apoi glisare obiectul
 MovementTools=Instrumente de mi\u015fcare
 NameIcon=Nume & Pictogram\u0103
@@ -232,7 +232,7 @@ Select=Selectare obiect
 Select.Help=Click pe obiect pentru selectare
 SelectAll=Selectare total\u0103
 SelectAncestors=Selectare p\u0103rin\u0163i
-SelectCurrentLayer=Selectare nivel curent\ 
+SelectCurrentLayer=Selectare nivel curent
 SelectDescendants=Selectare descende\u0163i
 Semicircle=Semicerc prin dou\u0103 puncte
 Semicircle.Help=Selectare dou\u0103 puncte
@@ -243,15 +243,15 @@ Settings.Save=Salvare set\u0103ri
 ShowCheckBox=Caset\u0103 de selectare pentru afi\u015fare / ascundere obiecte
 ShowCheckBox.Help=Click pe suprafa\u0163a de desen pentru specificare pozi\u0163ie
 ShowHideLabel=Afi\u015fare / Ascundere obiect
-ShowHideLabel.Help=Selectare obiect\ 
+ShowHideLabel.Help=Selectare obiect
 ShowHideObject=Afi\u015fare / Ascundere obiect
 ShowHideObject.Help=Selectare obiect de ascuns, apoi schimbare c\u0103tre alt instrument
-ShowInToolBar=Afi\u015fare în bara de instrumente\ 
+ShowInToolBar=Afi\u015fare în bara de instrumente
 ShowInputField=Afi\u015fare bara de intr\u0103ri
 ShowMenuBar=Afi\u015fare bara de meniu
 ShowResetIcon=Afi\u015fare pictogram\u0103 pentru resetarea construc\u0163iei
 ShowToolBar=Afi\u015fare bara de instrumente
-ShowToolBarHelp=Afi\u015fare ajutor bar\u0103 de instrumente\ 
+ShowToolBarHelp=Afi\u015fare ajutor bar\u0103 de instrumente
 ShowViewTitlebar=Afi\u015fare bara de titlu a vizualiz\u0103rilor
 Slider=Instrument glisare
 Slider.Help=Click pe suprafa\u0163a de desen pentru a specifica pozi\u0163ia
@@ -279,7 +279,7 @@ Tools=Instrumente
 Trace=Urm\u0103 Activ\u0103 / Inactiv\u0103
 Trace.Help=Selectare obiect pentru afi\u015fare / ascundere urm\u0103
 TransformationTools=Instrumente de transformare
-TranslateByVector=Translatare obiect prin vector\ 
+TranslateByVector=Translatare obiect prin vector
 TranslateByVector.Help=Selectare obiect de traslatat, apoi vector
 TranslateView=Mi\u015fcare suprafa\u0163\u0103 de desen
 TranslateView.Help=Glisare suprafa\u0163\u0103 de desen sau o ax\u0103 (Shift + Drag)
@@ -295,8 +295,8 @@ Window=Fereastr\u0103
 Windows=Ferestre
 Zoom=Panoramare
 ZoomIn=Amplificare panoram\u0103
-ZoomIn.Help=Click pe surafa\u0163a de desen pentru amplificarea imaginii (roti\u0163\u0103 mouse)\ 
+ZoomIn.Help=Click pe surafa\u0163a de desen pentru amplificarea imaginii (roti\u0163\u0103 mouse)
 ZoomOut=Reducere panoram\u0103
-ZoomOut.Help=Click pe surafa\u0163a de desen pentru mic\u015forarea imaginii (roti\u0163\u0103 mouse)\ 
+ZoomOut.Help=Click pe surafa\u0163a de desen pentru mic\u015forarea imaginii (roti\u0163\u0103 mouse)
 off=Oprit
 on=Pornit
