--- a/geogebra/properties/menu_sq.properties
+++ b/geogebra/properties/menu_sq.properties
@@ -158,7 +158,7 @@ Midpoint=Pike Mesi
 Midpoint.Help=Zgjidh dy pika, nje segment, rreth ose konike
 MirrorAtCircle=Pasqyro piken ne rreth
 MirrorAtCircle.Help=Zgjidh piken per pasqyrim, pastaj rrethin
-MirrorAtLine=Pasqyro objektin lidhur me drejtzen\ 
+MirrorAtLine=Pasqyro objektin lidhur me drejtzen
 MirrorAtLine.Help=Zgjidh objektin per pasqyrim, pastaj drejtzen e pasqyrimit
 MirrorAtPoint=Pasqyro objektin lidhur me Piken
 MirrorAtPoint.Help=Zgjidh objektin per pasqyrim, pastaj piken qendrore
@@ -229,7 +229,7 @@ Rounding=Rrumbullakosje
 Save=Ruaj
 SaveAs=Ruaj si
 SaveCurrentFileQuestion=Doni ta ruani Dokumentin Aktual
-SaveCurrentPerspective=Ruaj Perspektiven e tanishme\ 
+SaveCurrentPerspective=Ruaj Perspektiven e tanishme
 Segment=Segment midis dy pikave
 Segment.Help=Zgjidh dy pika
 SegmentFixed=Segment me gjatesi te dhene nga pika
@@ -280,7 +280,7 @@ ToolHelp=Mjeti Ndihme
 ToolName=Mjeti Emer
 Toolbar=Brez Mjetesh
 Toolbar.Customize=Pershtat Brez-Mjeti
-Toolbar.ResetDefault=Brez mjeti per Rivendosjen e Paracaktuar\ 
+Toolbar.ResetDefault=Brez mjeti per Rivendosjen e Paracaktuar
 Tools=Mjete
 Trace=Gjurme
 Trace.Help=Zgjidh objekt per te shfaqur\\fshehur gjurmen e tij
