--- a/geogebra/properties/menu_vi.properties
+++ b/geogebra/properties/menu_vi.properties
@@ -9,7 +9,7 @@ AngleUnit=\u0110\u01a1n v\u1ecb c\u1ee7a góc
 AngularBisector=\u0110\u01b0\u1eddng phân giác
 AngularBisector.Help=Ch\u1ecdn 3 \u0111i\u1ec3m ho\u1eb7c 2 \u0111\u01b0\u1eddng th\u1eb3ng
 Area=Di\u1ec7n tích
-Area.Help=\u0110a giác, \u0111\u01b0\u1eddng tròn ho\u1eb7c \u0111\u01b0\u1eddng conic
+Area.Help=\u0110a giác, \u0111\u01b0\u1eddng tròn ho\u1eb7c \u0111\u01b0\u1eddng côníc
 Axes=H\u1ec7 tr\u1ee5c t\u1ecda \u0111\u1ed9
 BasicLineTools=Công c\u1ee5 \u0110\u01b0\u1eddng Th\u1eb3ng
 Blue=Xanh
@@ -19,9 +19,9 @@ Cancel=Hu\u1ef7
 CheckboxSize=Kích th\u01b0\u1edbc ô ch\u1ecdn
 CheckboxSize.Large=L\u1edbn
 CheckboxSize.Regular=Bình th\u01b0\u1eddng
-Circle2=Hình tròn khi bi\u1ebft tâm và 1 \u0111i\u1ec3m trên \u0111\u01b0\u1eddng tròn
+Circle2=\u0110\u01b0\u1eddng tròn khi bi\u1ebft tâm và 1 \u0111i\u1ec3m trên \u0111\u01b0\u1eddng tròn
 Circle2.Help=Xác \u0111\u1ecbnh tâm và 1 \u0111i\u1ec3m thu\u1ed9c \u0111\u01b0\u1eddng tròn
-Circle3=Hình tròn khi bi\u1ebft 3 \u0111i\u1ec3m thu\u1ed9c \u0111\u01b0\u1eddng tròn
+Circle3=\u0110\u01b0\u1eddng tròn khi bi\u1ebft 3 \u0111i\u1ec3m thu\u1ed9c \u0111\u01b0\u1eddng tròn
 Circle3.Help=Xác \u0111\u1ecbnh 3 \u0111i\u1ec3m thu\u1ed9c \u0111\u01b0\u1eddng tròn
 CircleArc3=Cung tròn khi bi\u1ebft tâm và 2 \u0111i\u1ec3m trên cung tròn
 CircleArc3.Help=Xác \u0111\u1ecbnh tâm và 2 \u0111i\u1ec3m thu\u1ed9c cung tròn
@@ -34,7 +34,7 @@ CircleSector3=Hình qu\u1ea1t khi bi\u1ebft tâm và qua 2 \u0111i\u1ec3m trên hình
 CircleSector3.Help=Xác \u0111\u1ecbnh tâm và 2 \u0111i\u1ec3m thu\u1ed9c hình qu\u1ea1t
 CircumcircleArc3=Cung tròn qua 3 \u0111i\u1ec3m
 CircumcircleArc3.Help=Xác \u0111\u1ecbnh 3 \u0111i\u1ec3m thu\u1ed9c cung tròn
-CircumcircleSector3=Hình qu\u1ea1t qua 3 \u0111i\u1ec3m
+CircumcircleSector3=Hình qu\u1ea1t \u0111i qua 3 \u0111i\u1ec3m
 CircumcircleSector3.Help=Xác \u0111\u1ecbnh 3 \u0111i\u1ec3m thu\u1ed9c hình qu\u1ea1t
 ClearColumn=Xoá C\u1ed9t
 ClearColumns=Xoá các C\u1ed9t
@@ -52,11 +52,11 @@ Compasses=Com-pa
 Compasses.Help=Ch\u1ecdn m\u1ea3ng ho\u1eb7c hai \u0111i\u1ec3m c\u1ee7a bán kính, r\u1ed3i ch\u1ecdn \u0111i\u1ec3m gi\u1eefa
 Condition.ShowObject=\u0110i\u1ec1u k\u1ec7n c\u1ea7n có \u0111\u1ec3 \u0111\u1ed1i t\u01b0\u1ee3ng \u0111\u01b0\u1ee3c hi\u1ec3n th\u1ecb
 Conditions=\u0110i\u1ec1u ki\u1ec7n
-Conic=\u0110\u01b0\u1eddng Conic
-Conic5=\u0110\u01b0\u1eddng Conic qua 5 \u0111i\u1ec3m
-Conic5.Help=Xác \u0111\u1ecbnh 5 \u0111i\u1ec3m thu\u1ed9c \u0111\u01b0\u1eddng Conic
-ConicMenu=\u0110\u01b0\u1eddng Conic
-ConicSectionTools=Công c\u1ee5 Cônic
+Conic=\u0110\u01b0\u1eddng Côníc
+Conic5=\u0110\u01b0\u1eddng Côníc qua 5 \u0111i\u1ec3m
+Conic5.Help=Xác \u0111\u1ecbnh 5 \u0111i\u1ec3m thu\u1ed9c \u0111\u01b0\u1eddng Côníc
+ConicMenu=\u0110\u01b0\u1eddng Côníc
+ConicSectionTools=Công c\u1ee5 Côníc
 Continuity=Liên t\u1ee5c
 Copy=Sao chép
 CopyToInputBar=Sao chép vào thanh k\u1ebft xu\u1ea5t
@@ -86,17 +86,17 @@ DontSave=Không l\u01b0u
 DrawingPadToClipboard=Sao chép vùng làm vi\u1ec7c vào b\u1ed9 nh\u1edb
 DynamicColors=Màu s\u1eafc
 Edit=Ch\u1ec9nh s\u1eeda
-Ellipse3=Ê-líp
-Ellipse3.Help=Ch\u1ecdn tiêu \u0111i\u1ec3m và 1 \u0111i\u1ec3m trên ê-líp
+Ellipse3=Elíp
+Ellipse3.Help=Ch\u1ecdn tiêu \u0111i\u1ec3m và 1 \u0111i\u1ec3m trên Elíp
 EnableLabelDrags=Cho phép kéo th\u1ea3 các nhãn
 EnableRightClick=Cho phép nh\u1ea5p ph\u1ea3i chu\u1ed9t
-English=English
+English=Ti\u1ebfng Anh
 Exit=Thoát
 ExpandAll=M\u1edf r\u1ed9ng t\u1ea5t c\u1ea3
 Export=Xu\u1ea5t
 FastHelp=Tr\u1ee3 giúp nhanh
 File=H\u1ed3 s\u01a1
-Files=H\u1ed3 s\u01a1
+Files=T\u1eadp h\u1ed3 s\u01a1
 FitLine=\u0110\u01b0\u1eddng th\u1eb3ng
 FitLine.Help=Ch\u1ecdn các \u0111i\u1ec3m b\u1eb1ng kh\u1ed1i, ho\u1eb7c danh sách \u0111i\u1ec3m
 Fix=C\u1ed1 \u0111\u1ecbnh / Không c\u1ed1 \u0111\u1ecbnh
@@ -106,14 +106,14 @@ Functionality=Theo ch\u1ee9c n\u0103ng
 General=T\u1ed5ng quan
 GeneralTools=Công c\u1ee5 chung
 Geometry=Hình h\u1ecdc
-German=German
+German=Ti\u1ebfng \u0110\u1ee9c
 GraphicsQuality=Ch\u1ea5t l\u01b0\u1ee3ng \u1ea3nh
-Green=Xanh lá
+Green=Màu xanh lá cây
 Grid=L\u01b0\u1edbi
 Help=Tr\u1ee3 giúp
 HighQuality=Ch\u1ea5t l\u01b0\u1ee3ng cao
-Hyperbola3=Hypécbôn
-Hyperbola3.Help=Ch\u1ecdn tiêu \u0111i\u1ec3m và 1 \u0111i\u1ec1m trên hypécbôn
+Hyperbola3=Hypebôn
+Hyperbola3.Help=Ch\u1ecdn tiêu \u0111i\u1ec3m và 1 \u0111i\u1ec1m trên Hypebôn
 Icon=Bi\u1ec3u t\u01b0\u1ee3ng
 IgnoreDocumentPerspective=B\u1ecf qua cách trình bày c\u1ee7a các v\u0103n b\u1ea3n \u0111ã m\u1edf
 Image=Chèn \u1ea3nh
@@ -122,13 +122,13 @@ InputField=Khung nh\u1eadp l\u1ec7nh
 InputField.Help=Ch\u1ecdn \u0111\u1ed1i t\u01b0\u1ee3ng \u0111\u1ec3 chép tên c\u1ee7a \u0111\u1ed1i t\u01b0\u1ee3ng \u0111ó vào khung nh\u1eadp l\u1ec7nh
 InputObjects=\u0110\u1ed1i t\u01b0\u1ee3ng nh\u1eadp vào
 InputOnTop=Hi\u1ec3n th\u1ecb phía trên
-InsertAbove=Chèn trên
-InsertBelow=Chèn d\u01b0\u1edbi
-InsertLeft=Chèn trái
-InsertRight=Chèn ph\u1ea3i
+InsertAbove=Chèn phía trên
+InsertBelow=Chèn phía d\u01b0\u1edbi
+InsertLeft=Chèn bên trái
+InsertRight=Chèn bên ph\u1ea3i
 Intersect=Giao \u0111i\u1ec3m c\u1ee7a 2 \u0111\u1ed1i t\u01b0\u1ee3ng
 Intersect.Help=Ch\u1ecdn 2 \u0111\u1ed1i t\u01b0\u1ee3ng riêng bi\u1ec7t ho\u1eb7c ch\u1ed7 giao nhau c\u1ee7a chúng
-Isometric=\u0110\u1eb3ng c\u1ef1c
+Isometric=\u0110\u1eb3ng c\u1ef1
 Join=\u0110\u01b0\u1eddng th\u1eb3ng qua 2 \u0111i\u1ec3m
 Join.Help=Ch\u1ecdn 2 \u0111i\u1ec3m
 Labeling=Tên
@@ -153,7 +153,7 @@ ManagePerspectives=Qu\u1ea3n lý ph\u1ed1i c\u1ea3nh
 MeasurementTools=Công c\u1ee5 \u0111o l\u01b0\u1eddng
 Metal=Kim lo\u1ea1i
 Midpoint=Trung \u0111i\u1ec3m
-Midpoint.Help=Ch\u1ecdn 2 \u0111i\u1ec3m, \u0111\u01b0\u1eddng th\u1eb3ng, \u0111\u01b0\u1eddng tròn ho\u1eb7c \u0111\u01b0\u1eddng conic
+Midpoint.Help=Ch\u1ecdn 2 \u0111i\u1ec3m, \u0111\u01b0\u1eddng th\u1eb3ng, \u0111\u01b0\u1eddng tròn ho\u1eb7c \u0111\u01b0\u1eddng côníc
 MirrorAtCircle=\u0110\u1ed1i x\u1ee9ng \u0111i\u1ec3m qua \u0111\u01b0\u1eddng tròn
 MirrorAtCircle.Help=Ch\u1ecdn \u0111i\u1ec3m \u0111\u1ed1i x\u1ee9ng, r\u1ed3i \u0111\u1ebfn \u0111\u01b0\u1eddng tròn
 MirrorAtLine=\u0110\u1ed1i x\u1ee9ng qua \u0111\u01b0\u1eddng th\u1eb3ng
@@ -164,8 +164,8 @@ Mode=Cách th\u1ee9c
 Motif=Giao di\u1ec7n Motif
 Move=Di chuy\u1ec3n
 Move.Help=Ch\u1ecdn và kéo \u0111\u1ec3 di chuy\u1ec3n \u0111\u1ed1i t\u01b0\u1ee3ng
-MoveRotate=Xoay \u0111\u1ed1i t\u01b0\u1ee3ng quanh 1 \u0111i\u1ec3m
-MoveRotate.Help=Ch\u1ecdn tâm xoay tr\u01b0\u1edbc, sau \u0111ó ch\u1ecdn và kéo \u0111\u1ed1i t\u01b0\u1ee3ng
+MoveRotate=Quay \u0111\u1ed1i t\u01b0\u1ee3ng quanh 1 \u0111i\u1ec3m
+MoveRotate.Help=Ch\u1ecdn tâm quay tr\u01b0\u1edbc, sau \u0111ó ch\u1ecdn và kéo \u0111\u1ed1i t\u01b0\u1ee3ng
 MovementTools=Công c\u1ee5 di chuy\u1ec3n
 NameIcon=Tên & Bi\u1ec3u t\u01b0\u1ee3ng
 New=T\u1ea1o m\u1edbi
@@ -192,7 +192,7 @@ PointMenu=\u0110i\u1ec3m
 PointStyle=Ki\u1ec3u \u0111i\u1ec3m
 PointTools=Công c\u1ee5 \u0111i\u1ec3m
 PolarDiameter=\u0110\u01b0\u1eddng \u0111\u1ed1i c\u1ef1c ho\u1eb7c \u0111\u01b0\u1eddng kính kéo dài
-PolarDiameter.Help=Ch\u1ecdn \u0111i\u1ec3m ho\u1eb7c \u0111\u01b0\u1eddng th\u1eb3ng, sau \u0111ó ch\u1ecdn hình tròn ho\u1eb7c \u0111\u01b0\u1eddng Conic
+PolarDiameter.Help=Ch\u1ecdn \u0111i\u1ec3m ho\u1eb7c \u0111\u01b0\u1eddng th\u1eb3ng, sau \u0111ó ch\u1ecdn hình tròn ho\u1eb7c \u0111\u01b0\u1eddng côníc
 Polygon=\u0110a giác
 Polygon.Help=Ch\u1ecdn các \u0111\u1ec9nh \u0111a giác sau \u0111ó ch\u1ecdn l\u1ea1i \u0111\u1ec9nh \u0111\u1ea7u tiên
 PolygonTools=Công c\u1ee5 \u0111a giác
@@ -219,8 +219,8 @@ Relation=Quan h\u1ec7 gi\u1eefa 2 \u0111\u1ed1i t\u01b0\u1ee3ng
 Relation.Help=Ch\u1ecdn 2 \u0111\u1ed1i t\u01b0\u1ee3ng
 Rename=\u0110\u1eb7t l\u1ea1i tên
 RightAngleStyle=Ki\u1ec3u góc vuông
-RotateByAngle=Xoay \u0111\u1ed1i t\u01b0\u1ee3ng quanh 1 \u0111i\u1ec3m theo 1 góc cho tr\u01b0\u1edbc
-RotateByAngle.Help=Ch\u1ecdn \u0111\u1ed1i t\u01b0\u1ee3ng c\u1ea7n xoay, sau \u0111ó ch\u1ecdn tâm xoay và nh\u1eadp góc vào
+RotateByAngle=Quay \u0111\u1ed1i t\u01b0\u1ee3ng quanh 1 \u0111i\u1ec3m theo 1 góc cho tr\u01b0\u1edbc
+RotateByAngle.Help=Ch\u1ecdn \u0111\u1ed1i t\u01b0\u1ee3ng c\u1ea7n quay, sau \u0111ó ch\u1ecdn tâm quay và nh\u1eadp góc vào
 Rounding=Làm tròn
 Save=L\u01b0u l\u1ea1i
 SaveAs=L\u01b0u l\u1ea1i v\u1edbi tên khác
@@ -249,13 +249,13 @@ ShowHideLabel.Help=Ch\u1ecdn \u0111\u1ed1i t\u01b0\u1ee3ng c\u1ea7n hi\u1ec7n / 
 ShowHideObject=Hi\u1ec7n / \u1ea9n \u0111\u1ed1i t\u01b0\u1ee3ng
 ShowHideObject.Help=Ch\u1ecdn các \u0111\u1ed1i t\u01b0\u1ee3ng c\u1ea7n \u1ea9n chúng, sau \u0111ó ch\u1ecdn ki\u1ec3u c\u1ea7n thay \u0111\u1ed5i r\u1ed3i ch\u1ecdn áp d\u1ee5ng nh\u1eefng thay \u0111\u1ed5i \u0111ó
 ShowInToolBar=Hi\u1ec3n th\u1ecb trên thanh công c\u1ee5
-ShowInputField=Hi\u1ec3n th\u1ecb khung nh\u1eadp
-ShowMenuBar=
+ShowInputField=Hi\u1ec3n th\u1ecb khung nh\u1eadp l\u1ec7nh
+ShowMenuBar=Hi\u1ec3n th\u1ecb thanh th\u1ef1c \u0111\u01a1n
 ShowResetIcon=
 ShowToolBar=Hi\u1ec3n th\u1ecb thanh công c\u1ee5
-ShowToolBarHelp=Hi\u1ec3n th\u1ecb tr\u1ee3 giúp thanh công c\u1ee5
+ShowToolBarHelp=Hi\u1ec3n th\u1ecb thanh công c\u1ee5 tr\u1ee3 giúp
 ShowViewTitlebar=Hi\u1ec3n th\u1ecb thanh tiêu \u0111\u1ec1 Hi\u1ec3n Th\u1ecb
-Slider=Con tr\u01b0\u1ee3t
+Slider=Thanh tr\u01b0\u1ee3t
 Slider.Help=Ch\u1ecdn vùng làm vi\u1ec7c v\u1ecb trí ch\u1ec9 \u0111\u1ecbnh con tr\u1ecf c\u1ea7n tr\u01b0\u1ee3t t\u1edbi
 Slope=H\u1ec7 s\u1ed1 góc
 Slope.Help=\u0110\u01b0\u1eddng th\u1eb3ng
@@ -263,7 +263,7 @@ SpecialLineTools=Công c\u1ee5 \u0110\u01b0\u1eddng th\u1eb3ng \u0111\u1eb7c bi\u
 SpecialObjectTools=Công c\u1ee5 \u0111\u1ed1i t\u01b0\u1ee3ng \u0111\u1eb7c bi\u1ec7t
 SubstituteDialog=H\u1ed9p tho\u1ea1i thay th\u1ebf
 Tangent=Ti\u1ebfp tuy\u1ebfn
-Tangent.Help=Ch\u1ecdn 1 \u0111i\u1ec3m tr\u01b0\u1edbc, sau \u0111ó ch\u1ecdn \u0111\u01b0\u1eddng tròn ho\u1eb7c \u0111\u01b0\u1eddng conic
+Tangent.Help=Ch\u1ecdn 1 \u0111i\u1ec3m tr\u01b0\u1edbc, sau \u0111ó ch\u1ecdn \u0111\u01b0\u1eddng tròn ho\u1eb7c \u0111\u01b0\u1eddng côníc
 Text=Ch\u1eef
 Text.Help=Ch\u1ecdn v\u1ecb trí ch\u1ec9 \u0111\u1ecbnh c\u1ea7n vi\u1ebft ch\u1eef trên vùng làm vi\u1ec7c
 Tool=Công c\u1ee5
@@ -281,7 +281,7 @@ Tools=Công c\u1ee5
 Trace=M\u1edf / T\u1eaft d\u1ea5u v\u1ebft
 Trace.Help=Ch\u1ecdn \u0111\u1ed1i t\u01b0\u1ee3ng mu\u1ed1n hi\u1ec3n th\u1ecb / t\u1eaft d\u1ea5u v\u1ebft c\u1ee7a \u0111\u1ed1i t\u01b0\u1ee3ng \u0111ó
 TransformationTools=Công c\u1ee5 bi\u1ebfn \u0111\u1ed5i
-TranslateByVector=T\u1ecbnh ti\u1ebfn theo vécct\u01a1
+TranslateByVector=T\u1ecbnh ti\u1ebfn theo véct\u01a1
 TranslateByVector.Help=Ch\u1ecdn \u0111i\u1ec3m c\u1ea7n chuy\u1ec3n \u0111\u1ed5i, sau \u0111ó ch\u1ecdn véct\u01a1
 TranslateView=Di chuy\u1ec3n vùng làm vi\u1ec7c
 TranslateView.Help=Nh\u1ea5n chu\u1ed9t và kéo trên vùng làm vi\u1ec7c
@@ -294,8 +294,8 @@ VectorFromPoint.Help=Ch\u1ecdn \u0111i\u1ec3m c\u1ea7n t\u1ea1o véct\u01a1 và ch
 VectorMenu=Véct\u01a1
 View=Hi\u1ec3n th\u1ecb
 Window=C\u1eeda s\u1ed5
-Windows=C\u1eeda s\u1ed5
-Zoom=Phóng to
+Windows=Nhi\u1ec1u c\u1eeda s\u1ed5
+Zoom=Phóng to / thu nh\u1ecf
 ZoomIn=Phóng to
 ZoomIn.Help=Ch\u1ecdn v\u1ecb trí trên vùng làm vi\u1ec7c \u0111\u1ec3 phóng to
 ZoomOut=Thu nh\u1ecf
