--- a/geogebra/properties/plain_ca.properties
+++ b/geogebra/properties/plain_ca.properties
@@ -117,7 +117,7 @@ ChooseObject=Selecciona un objecte
 Circle=Cercle
 CircleEquation=(x - m)² + (y - n)² = r²
 CircleThroughABC=Circumferència que passa per %0, %1 i %2
-CircleThroughAwithCenterB=Circumferència de centre %0 i que passa per %1
+CircleThroughAwithCenterB=Circumferència de centre %1 i que passa per %0
 CircleWithCenterAandRadiusB=Circumferència de centre %0 i radi %1
 Color=Color
 ColorfulConstructionProtocol=Passos de la construcció en color
@@ -184,7 +184,7 @@ ExtremumOfA=Extrem de %0
 Filling=Ombrejat
 Finish=D'acord
 FirstAxisLengthOf=Longitud del primer eix de
-FirstAxisLengthOfA=Semieix Principal de %0
+FirstAxisLengthOfA=Semieix principal de %0
 FirstAxisOf=Primer eix de
 FirstAxisOfA=Eix principal de %0
 FixCheckbox=Fixa casella de verificació
@@ -226,7 +226,7 @@ InsertPictureOfConstruction=Insereix una figura o construcció
 Integral=Integral
 IntegralOfA=Integral de %0
 IntegralOfAfromBtoC=Integral de %0 des de %1 a %2
-IntersectingLines=Tallant rectes
+IntersectingLines=Rectes Secants
 IntersectionPointOf=Punt d'intersecció
 IntersectionPointOfAB=Punt d'intersecció entre %0 i %1
 IntersectionPointOfABWithInitialValueC=Punt d'intersecció entre %0 i %1 amb valor inicial %2
@@ -242,8 +242,8 @@ LengthOfA=Longitud de %0
 Lengths=Longituds
 Line=Recta
 LineBisector=Mediatriu
-LineBisectorAB=Bisectriu %0, %1
-LineBisectorOfA=Bisectriu %0
+LineBisectorAB=Mediatriu %0, %1
+LineBisectorOfA=Mediatriu %0
 LineStyle=Estil de linia
 LineThrough=Recta que passa per
 LineThroughAB=Recta que passa per %0 i %1
@@ -284,7 +284,7 @@ PGFExport.Grayscale=Escala de grisos
 Parabola=Paràbola
 ParabolaEquation=y² =  o  x² =
 ParabolaWithFocusAandDirectrixB=Paràbola de focus %0 i directriu %1
-ParallelLines=Rectes paral·leleles
+ParallelLines=Rectes paral·leles
 ParameterOf=Paràmetre de
 ParameterOfA=Paràmetre de %0
 ParametricForm=Forma paramètrica
@@ -329,7 +329,7 @@ RootOfAWithInitialValueB=Arrel de %0 amb valor inicial %1
 RootOfAonIntervalBC=Arrel de %0 a l'interval [%1, %2]
 ScaleInCentimeter=Escala en cm
 SecondAxisLengthOf=Longitud del segon eix
-SecondAxisLengthOfA=Longitud de l'eix secundari de %0
+SecondAxisLengthOfA=Semieix secundari de %0
 SecondAxisOf=Segon eix de
 SecondAxisOfA=Eix secundari de %0
 Sector=Sector
@@ -368,8 +368,8 @@ TickDistance=Distància
 Title=Títol
 TitleExportPgf=Exporta a PGF
 TitleExportPstricks=Exporta GeoGebra a PSTricks
-TraceOff=Desactiva la traçada
-TraceOn=Activa la traçada
+TraceOff=Desactiva el traç
+TraceOn=Activa el traç
 TraceToSpreadsheet=Registra al full de càlcul
 TranslationOf=Translació de
 TranslationOfAbyB=Translació de %0 segons %1
