--- a/geogebra/properties/plain_da.properties
+++ b/geogebra/properties/plain_da.properties
@@ -89,10 +89,10 @@ Color=Farve
 ColorfulConstructionProtocol=Farverig konstruktions protokol
 Command=Kommando
 ComplexNumber=Komplekst tal
-Conic=Konisk
+Conic=Keglesnit
 ConicLinesEquation=(a x + b y + c) (d x + e y + f) = 0
-ConicThroughABCDE=Konisk gennem %0, %1, %2, %3, %4
-Conics=Koniske
+ConicThroughABCDE=Keglesnit gennem %0, %1, %2, %3, %4
+Conics=Keglesnit
 ConstructionProtocol=Konstruktionsbeskrivelse
 ConstructionProtocolButton=Knap der åbner konstruktions protokollen
 ConstructionProtocolHelp=<html><body><p><b>Brug af konstruktionsbeskrivelsen</b></p><p><br><b>Tastatur</b></p><table border="1"><tr><td>&#8593;</td><td>forrige trin i konstruktionen</td></tr><tr><td >&#8595;</td><td >næste trin i konstruktionen</td></tr><tr><td >Hjem</td><td >Før konstruktion</td></tr><tr><td>End</td><td>Sidste trin i konstruktionen</td></tr><tr><td >Del</td><td>slet konstruktionstrin</td></tr></table><p><b><br>Mus</b></p><table border="1"><tr><td>dobbelt klik på rækken</td><td >vælg konstruktionstrin</td></tr><tr><td>dobbelt klik på overskrift</td><td >Før konstruktion </td></tr><tr><td>træk &amp; slip række</td><td>flyt konstruktionstrinnet</td></tr><tr><td>højre klik række</td><td>kontekst menu</td></tr></table><body></html>
