--- a/geogebra/properties/plain_nl.properties
+++ b/geogebra/properties/plain_nl.properties
@@ -51,7 +51,7 @@ AnimationSpeed=Animatiesnelheid
 AnimationStep=Stapgrootte
 ApplicationName=GeoGebra
 ApplicationURL=http://www.geogebra.org
-Apply=OK
+Apply=Toepassen
 Arc=Kegelsnedeboog
 AsymptoteToA=Asymptoot aan %0
 AsymptoticLine=Asymptoot
@@ -122,7 +122,7 @@ Directrix=Richtlijn
 DirectrixOf=Richtlijn van
 DirectrixOfA=Richtlijn van%0
 DisplayPointSymbol=Toon het symbool voor punten
-DistanceAB.LaTeX="\\left| " + %0 + %1 + "\\right| = " + %2
+DistanceAB.LaTeX="\\bovenlijn{" + %0 + %1 + "} \\, = \\, " + %2
 DistanceOf=Afstand tussen
 DistanceOfAandB=Afstand van %0 tot %1
 DoubleClickToOpen=Je kan het toepassingsvenster openen door te dubbelklikken op de tekening.
@@ -441,9 +441,9 @@ withStartValue=met beginwaarde
 # #
 # geen spaties toegestaan, dus niet x as
 # #
-xAxis=x-as
+xAxis=xAs
 xmax=xmax
 xmin=xmin
-yAxis=y-as
+yAxis=yAs
 ymax=ymax
 ymin=ymin
