--- a/geogebra/properties/plain_ro.properties
+++ b/geogebra/properties/plain_ro.properties
@@ -91,7 +91,7 @@ ConicLinesEquation=(a *x + b*y+c)*(d*x+e*y+f)=0
 ConicThroughABCDE=Conic prin%0, %1, %2, %3, %4
 Conics=Conice
 ConstructionProtocol=Protocol de construc\u0163ie
-ConstructionProtocolButton=Buton pentru a deschide protocol de construc\u0163ie\ 
+ConstructionProtocolButton=Buton pentru a deschide protocol de construc\u0163ie
 ConstructionProtocolHelp=<html> <body> <p> <b> Utilizarea protocolului de constructii </ b> </ p> <br> <b> <Tastatura / b> </ p> <table border="1"> <tr> <td> \u2191 </ td> <td> pasul anterior de construc\u0163ii </ td> </ tr> <tr> <td> \u2193 </ td> <td> Pasul urm\u0103tor constructii </ td> </ tr> <tr> <td> Prima pagina </ td> <td> Start construc\u0163iei </ td> </ tr> <tr> <td> End </ td> <td> Sfâr\u015fitul de construc\u0163ie </ td> </ tr> <tr> <td> Del </ td> <td> pas \u015eterge constructii </ td> </ tr> </ table> <p> <b> <br> mouse-ul </ b> </ p> <tabelul de frontier\u0103 = "1"> <tr> <td> dublu clic pe rândul </ td> <td> Alege pas de construc\u0163ie </ td> </ tr> <tr> <td> dublu clic pe antet </ td> <td> Start de construc\u0163ie </ td> </ tr> <tr> <td> drag & drop rândul </ td> <td> Mutare pas de construc\u0163ie </ td> </ tr> <tr> <td> dreapta rând face\u0163i clic pe </ td > <td> Context menu </ td> </ tr> </ table> <body> </ html>
 ConstructionProtocolNavigation=Bar\u0103 de naviga\u0163ie pentru trepte de construc\u0163ii
 Coordinates=Coordonatele
@@ -115,7 +115,7 @@ DisplayPointSymbol=Afi\u015feaz\u0103 simbolul pentru puncte
 # pentru instrumentele de distant\u0103
 DistanceAB.LaTeX="\\overline{" + %0 + %1 + "} \\, = \\, " + %2
 DistanceOfAandB=Distan\u0163a  %0 si %1
-DoubleClickToOpen=Face\u0163i dublu clic se deschide fereastra de aplicare\ 
+DoubleClickToOpen=Face\u0163i dublu clic se deschide fereastra de aplicare
 DoubleLine=Linie dubl\u0103
 DoubleLineEquation=(a x + b y + c)² = 0
 Down=Jos
@@ -163,7 +163,7 @@ Hyperbola=Hiberbol\u0103
 HyperbolaEquation=(x - m)² / a² - (y - n)² / b² = 1
 HyperbolaWithFociABPassingThroughC=Hiperbol\u0103 cu focare %0 , %1 care trece prin %2
 HyperbolaWithFociABandFirstAxisLengthC=Hiperbol\u0103 cu focare %0, %1 si prima axa ca lungime %2
-Image=Imagine\ 
+Image=Imagine
 ImplicitConicEquation=a x² + b xy + c y² + d x + e y = f
 ImplicitLineEquation=a x + b y = c
 Increasing=Crescând
@@ -195,7 +195,7 @@ LineStyle=Stilul liniei
 LineThroughAB=Linie prin intermediul %0, %1
 LineThroughAParallelToB=Linie prin intermediul %0 paralel cu %1
 LineThroughAPerpendicularToB=Linie prin intermediul %0 perpendicular cu %1
-LineThroughAwithDirectionB=Linie prin intermdiul %0 cu direc\u0163ie %1\ 
+LineThroughAwithDirectionB=Linie prin intermdiul %0 cu direc\u0163ie %1
 LinearEccentricityOfA=Excentricitate liniar\u0103 cu %0
 LinearInequality=Inegalitate liniar\u0103
 Lines=Linii
