--- a/geogebra/properties/plain_sq.properties
+++ b/geogebra/properties/plain_sq.properties
@@ -104,7 +104,7 @@ Definition=Perkufizim
 Delete=Fshij
 DependentObjects=Objekte te Varura
 DerivativeOfA=Derivat i A
-DiameterOfAConjugateToB=I konjuguari i Diametrit te A lidhur me B\ 
+DiameterOfAConjugateToB=I konjuguari i Diametrit te A lidhur me B
 DirectionOfA=Drejtim i A
 Directrix=Direktrice
 DirectrixOfA=Direktrice e A
@@ -165,7 +165,7 @@ ImplicitLineEquation=Ekuacion Implicit i Drejtzes
 Increasing=Rrites
 Inequality=Mosbarazim
 InflectionPointofA=Pike Infleksioni e A
-InputFieldHelp=\ Fusha Input. NdihmeZona e Inputit, Ndihme
+InputFieldHelp=Fusha Input. NdihmeZona e Inputit, Ndihme
 InputLabel=Etikete Inputi(objekti qe futet)
 InputLabelToolTip=Shtyp nje Komande
 Insert=Fut
@@ -312,7 +312,7 @@ VectorPerpendicularToA=Vektor Pingul ndaj A
 Vectors=Vektore
 VertexOfA=Kulm i A
 ViewCloseExtraWindow=Dritarja Shtese ne Dritaren Kryesore e Mbyllur
-ViewOpenExtraWindow=\ Dritarja Shtese ne Dritaren Kryesore Hapur
+ViewOpenExtraWindow=Dritarja Shtese ne Dritaren Kryesore Hapur
 Width=Gjeresi
 WindowOpened=Dritare e Hapur
 XMLTagANotFound=Dokument i pavlefshem: XML  A  jo gjetur
@@ -328,7 +328,7 @@ clockwise=Orar
 counterClockwise=Kunder-Orar
 dependent=i Varur
 dilatedByFactor=Homotetizoj me Faktor
-emf=Pas-Dokument i Fuqizuar\ 
+emf=Pas-Dokument i Fuqizuar
 eps=Pas-Shenim i Permbyllur(Shkurtuar)
 equal=i Barabarte
 firstAxisLength=Gjatesi e Gjysem-Boshtit te Madh
