--- a/geogebra/properties/plain_vi.properties
+++ b/geogebra/properties/plain_vi.properties
@@ -1,6 +1,6 @@
 
-2x2Matrix=ma tr\u1eadn 2x2
-3x3Matrix=ma tr\u1eadn 3x3
+2x2Matrix=Ma tr\u1eadn 2x2
+3x3Matrix=Ma tr\u1eadn 3x3
 ADecimalPlace=%0 d\u1ea5u th\u1eadp phân
 ADecimalPlaces=%0 d\u1ea5u th\u1eadp phân
 ADilatedByFactorBfromC=%0 dãn b\u1edfi y\u1ebfu t\u1ed1 %0 t\u1eeb %2
@@ -16,14 +16,14 @@ AandBareLinearlyIndependent=%0 và %1 \u0111\u1ed9c l\u1eadp tuy\u1ebfn tính nhau
 AandBareNotEqual=%0 và %1 không b\u1eb1ng nhau
 AandBareParallel=%0 và %1 song song
 AandBarePerpendicular=%0 và %1 vuông góc nhau
-AandBcannotBeCompared=không th\u1ec3 so sánh %0 và %1
+AandBcannotBeCompared=Không th\u1ec3 so sánh %0 và %1
 AbsoluteScreenLocation=V\u1ecb trí c\u1ed1 \u0111\u1ecbnh trên màn hình (\u0111\u1ed1i t\u01b0\u1ee3ng không di chuy\u1ec3n khi di chuy\u1ec3n h\u1ec7 tr\u1ee5c)
 AdoesNotLieOnB=%0 không n\u1eb1m trên %1
 AdoesNotLieOnThePerimeterOfB=%0 không n\u1eb1m trong chu vi %1
-AdoesNothaveTheSameAreaAsB=di\u1ec7n tích %0 và %1 không b\u1eb1ng nhau
-AdoesNothaveTheSameLengthAsB=\u0111\u1ed9 dài %0 và %1 không b\u1eb1ng nhau
-AhasTheSameAreaAsB=di\u1ec7n tích %0 và %1 b\u1eb1ng nhau
-AhasTheSameLengthAsB=\u0111\u1ed9 dài %0 và %1 b\u1eb1ng nhau
+AdoesNothaveTheSameAreaAsB=Di\u1ec7n tích %0 và %1 không b\u1eb1ng nhau
+AdoesNothaveTheSameLengthAsB=\u0110\u1ed9 dài %0 và %1 không b\u1eb1ng nhau
+AhasTheSameAreaAsB=Di\u1ec7n tích %0 và %1 b\u1eb1ng nhau
+AhasTheSameLengthAsB=\u0110\u1ed9 dài %0 và %1 b\u1eb1ng nhau
 AintersectsWithBOnce=%0 giao %1 1 l\u1ea7n
 AintersectsWithBTwice=%0 giao %1 2 l\u1ea7n
 AisAnAsymptoteToB=%0 ti\u1ec7m c\u1eadn %1
@@ -35,7 +35,7 @@ AlgebraWindow=Hi\u1ec3n th\u1ecb danh sách \u0111\u1ed1i t\u01b0\u1ee3ng
 AliesOnB=%0 n\u1eb1m trên %1
 AliesOnThePerimeterOfB=%0 n\u1eb1m trong chu vi %1
 Angle=Góc
-AngleBetween=Góc c\u1ee7a
+AngleBetween=Góc gi\u1eefa
 AngleBetweenAB=Góc gi\u1eefa %0 và %1
 AngleBetweenABC=Góc gi\u1eefa %0, %1 và %2
 AngleBetweenABCofD=Góc gi\u1eefa %0, %1, %2 và %3
@@ -54,7 +54,7 @@ Apply=Áp d\u1ee5ng
 Arc=Cung
 AsymptoteToA=Ti\u1ec7m c\u1eadn %0
 AsymptoticLine=\u0110\u01b0\u1eddng ti\u1ec7m c\u1eadn
-AthDerivativeOfB=\u0111\u1ea1o hàm b\u1eadc %0 c\u1ee7a %1
+AthDerivativeOfB=\u0110\u1ea1o hàm b\u1eadc %0 c\u1ee7a %1
 Author=Tác gi\u1ea3
 AuxiliaryObject=\u0110\u1ed1i t\u01b0\u1ee3ng ph\u1ee5
 AuxiliaryObjects=\u0110\u1ed1i t\u01b0\u1ee3ng ph\u1ee5
@@ -68,7 +68,7 @@ Back=Tr\u1edf l\u1ea1i
 BackgroundColor=Màu n\u1ec1n
 BackgroundImage=Hình n\u1ec1n
 Bold=In \u0111\u1eadm
-Boolean=Boolean
+Boolean=Bi\u1ebfn Bool
 Breakpoint=\u0110i\u1ec3m d\u1eebng
 Cancel=H\u1ee7y b\u1ecf
 Caption=Tiêu \u0111\u1ec1
@@ -90,10 +90,10 @@ Color=Màu s\u1eafc
 ColorfulConstructionProtocol=Màu s\u1eafc quy \u0111\u1ecbnh s\u1eb5n cho cách d\u1ef1ng hình
 Command=Câu l\u1ec7nh
 ComplexNumber=S\u1ed1 ph\u1ee9c
-Conic=\u0110\u01b0\u1eddng Conic
+Conic=\u0110\u01b0\u1eddng côníc
 ConicLinesEquation=(a x + b y + c) (d x + e y + f) = 0
-ConicThroughABCDE=\u0110\u01b0\u1eddng cônic qua %0, %1, %2, %3, %4
-Conics=Các \u0111\u01b0\u1eddng Conic
+ConicThroughABCDE=\u0110\u01b0\u1eddng côníc qua %0, %1, %2, %3, %4
+Conics=Các \u0111\u01b0\u1eddng côníc
 ConstructionProtocol=Cách d\u1ef1ng hình
 ConstructionProtocolButton=Hi\u1ec3n th\u1ecb nút xem cách d\u1ef1ng hình
 ConstructionProtocolHelp=<html><body><p><b>H\u01b0\u1edbng d\u1eabn cách d\u1ef1ng hình</b></p><p><br><b>Bàn phím</b></p><table border="1"><tr><td >&#8593;</td><td>b\u01b0\u1edbc d\u1ef1ng hình tr\u01b0\u1edbc \u0111ó</td></tr><tr><td >&#8595;</td><td >b\u01b0\u1edbc d\u1ef1ng hình ti\u1ebfp theo</td></tr><tr><td>Home</td><td >tr\u1edf v\u1ec1 lúc b\u1eaft \u0111\u1ea7u d\u1ef1ng hình</td></tr><tr><td>End</td><td>\u0111i t\u1edbi b\u01b0\u1edbc cu\u1ed1i cùng c\u1ee7a cách d\u1ef1ng hình</td></tr><tr><td >Del</td><td >xóa b\u01b0\u1edbc d\u1ef1ng hình</td></tr></table><p><b><br>Con chu\u1ed9t</b></p><table border="1"><tr><td>Nh\u1ea5p chu\u1ed9t 2 l\u1ea7n vào hàng</td><td >b\u01b0\u1edbc d\u1ef1ng hình \u0111\u01b0\u1ee3c ch\u1ecdn \u0111\u1ec3 s\u1eed d\u1ee5ng</td></tr><tr><td>Nh\u1ea5p chu\u1ed9t 2 l\u1ea7n vào tiêu \u0111\u1ec1 c\u1ed9t</td><td >tr\u1edf v\u1ec1 lúc b\u1eaft \u0111\u1ea7u d\u1ef1ng hình</td></tr><tr><td>Kéo - th\u1ea3 hàng</td><td>di chuy\u1ec3n b\u01b0\u1edbc d\u1ef1ng hình</td></tr><tr><td>Nh\u1ea5p ph\u1ea3i chu\u1ed9t vào hàng</td><td>xu\u1ea5t hi\u1ec7n b\u1ea3ng Menu\n\
@@ -133,13 +133,13 @@ DrawingPadAsPSTricks=Hi\u1ec3n th\u1ecb \u0111\u1ed3 th\u1ecb theo PSTricks
 DrawingPadAsPicture=Hi\u1ec3n th\u1ecb \u0111\u1ed3 th\u1ecb d\u1ea1ng hình
 DrawingPagAsPGF=Hi\u1ec3n th\u1ecb \u0111\u1ed3 th\u1ecb d\u1ea1ng PGF/TikZ
 DynamicWorksheet=Vùng làm vi\u1ec7c
-DynamicWorksheetAsWebpage=Worksheet d\u1ea1ng webpage
-EccentricityOfA=\u0110\u1ed9 l\u1ec7ch tâm c\u1ee7a %0
+DynamicWorksheetAsWebpage=Vùng làm vi\u1ec7c d\u1ea1ng trang web
+EccentricityOfA=Tâm sai c\u1ee7a %0
 Edit=Ch\u1ec9nh s\u1eeda
-Ellipse=Hình E-lip
+Ellipse=Hình Elíp
 EllipseEquation=(x - m)² / a² + (y - n)² / b² = 1
-EllipseWithFociABPassingThroughC=Êlíp v\u1edbi tiêu \u0111i\u1ec3m %0, %1 \u0111i qua %2
-EllipseWithFociABandFirstAxisLengthC=Êlíp v\u1edbi tiêu \u0111i\u1ec3m %0, %1 và \u0111\u1ed9 dài tr\u1ee5c %2
+EllipseWithFociABPassingThroughC=Elíp v\u1edbi tiêu \u0111i\u1ec3m %0, %1 \u0111i qua %2
+EllipseWithFociABandFirstAxisLengthC=Elíp v\u1edbi tiêu \u0111i\u1ec3m %0, %1 và \u0111\u1ed9 dài tr\u1ee5c %2
 EmphasizeRightAngle=N\u1ed5i b\u1eadt góc vuông
 EmptySet=T\u1eadp h\u1ee3p r\u1ed7ng
 Equation=Ph\u01b0\u01a1ng trình
@@ -147,7 +147,7 @@ ExcentricityOf=\u0110\u1ed9 l\u1ec7ch tâm c\u1ee7a
 ExplicitConicEquation=y = a x² + b x + c
 ExplicitLineEquation=y = a x + b
 ExportAsWebpage=Xu\u1ea5t thành webpage
-ExportTextAsShapes=Xu\u1ea5t text thành hình
+ExportTextAsShapes=Xu\u1ea5t v\u0103n b\u1ea3n thành hình v\u1ebd
 Extremum=C\u1ef1c tr\u1ecb
 ExtremumOfA=C\u1ef1c tr\u1ecb c\u1ee7a %0
 Filling=Tô màu n\u1ec1n
@@ -158,7 +158,7 @@ FirstAxisOf=Tr\u1ee5c th\u1ee9 nh\u1ea5t c\u1ee7a
 FirstAxisOfA=Tr\u1ee5c \u0111\u1ea7u tiên c\u1ee7a %0
 FixCheckbox=C\u1ed1 \u0111\u1ecbnh h\u1ed9p ch\u1ecdn
 FixObject=C\u1ed1 \u0111\u1ecbnh \u0111\u1ed1i t\u01b0\u1ee3ng
-Foci=Foci
+Foci=Các tiêu \u0111i\u1ec3m
 Focus=Tiêu \u0111i\u1ec3m
 FocusOf=Tiêu \u0111i\u1ec3m c\u1ee7a
 FocusOfA=Tiêu \u0111i\u1ec3m c\u1ee7a %0
@@ -175,10 +175,10 @@ Hexagon=Hình l\u1ee5c giác
 Hide=\u1ea8n
 Home=Tr\u1edf v\u1ec1 m\u1eb7c \u0111\u1ecbnh
 HorizontalSplit=Chia thành d\u1ea1ng n\u1eb1m ngang
-Hyperbola=Hyperbol
+Hyperbola=Hypebôn
 HyperbolaEquation=(x - m)² / a² - (y - n)² / b² = 1
-HyperbolaWithFociABPassingThroughC=Hypécbôn v\u1edbi tiêu \u0111i\u1ec3m %0, %1 \u0111i qua %2
-HyperbolaWithFociABandFirstAxisLengthC=Hypécbôn v\u1edbi tiêu \u0111i\u1ec3m %0, %1 và \u0111\u1ed9 dài tr\u1ee5c \u0111\u1ea7u tiên %2
+HyperbolaWithFociABPassingThroughC=Hypebôn v\u1edbi tiêu \u0111i\u1ec3m %0, %1 \u0111i qua %2
+HyperbolaWithFociABandFirstAxisLengthC=Hypebôn v\u1edbi tiêu \u0111i\u1ec3m %0, %1 và \u0111\u1ed9 dài tr\u1ee5c \u0111\u1ea7u tiên %2
 IdeaAndDevelopment=Ý t\u01b0\u1edfng và phát tri\u1ec3n
 Image=Hình \u1ea3nh
 ImplicitConicEquation=a x² + b xy + c y² + d x + e y = f
@@ -223,23 +223,23 @@ LinearInequality=B\u1ea5t \u0111\u1eb3ng th\u1ee9c tuy\u1ebfn tính
 Lines=Các \u0111\u01b0\u1eddng th\u1eb3ng
 List=Danh sách
 Locus=Qu\u1ef9 tích
-Macro=Macro
+Macro=Mácrô
 Midpoint=Trung \u0111i\u1ec3m
 MidpointOf=Trung \u0111i\u1ec3m c\u1ee7a
 MidpointOfA=Trung \u0111i\u1ec3m c\u1ee7a %0
 MidpointOfAB=Trung \u0111i\u1ec3m c\u1ee7a %0, %1
 Name=Tên
-Name.list=danh sách
-Name.locus=loc
-Name.matrix=ma tr\u1eadn
-Name.picture=hình
-Name.polygon=\u0111a giác
-Name.text=text
+Name.list=Danh sách
+Name.locus=Tên qu\u1ef9 tích
+Name.matrix=Tên ma tr\u1eadn
+Name.picture=Tên \u1ea3nh
+Name.polygon=Tên \u0111a giác
+Name.text=Tên v\u0103n b\u1ea3n
 NameAndValue=Tên & Giá tr\u1ecb
 NewName=Tên m\u1edbi
 NewNameForA=Tên m\u1edbi c\u1ee7a %0
 Next=K\u1ebf ti\u1ebfp
-No.=S\u1ed1 TT
+No.=S\u1ed1 th\u1ee9 t\u1ef1
 Numeric=S\u1ed1
 NumericObjects=Các \u0111\u1ed1i t\u01b0\u1ee3ng d\u1ea1ng s\u1ed1
 OK=OK
@@ -250,7 +250,7 @@ OrthogonalVectorOf=Véct\u01a1 pháp tuy\u1ebfn c\u1ee7a
 Oscillating=Dao \u0111\u1ed9ng
 OverwriteFile=B\u1ea1n có mu\u1ed1n ghi \u0111è lên t\u1eadp tin này ?
 PGFExport.Grayscale=Grayscale
-Parabola=\u0110\u01b0\u1eddng Parabol
+Parabola=\u0110\u01b0\u1eddng Parabôn
 ParabolaEquation=y² =  ho\u1eb7c  x² =
 ParabolaWithFocusAandDirectrixB=Parabôn v\u1edbi tiêu \u0111i\u1ec3m %0 và \u0111\u01b0\u1eddng chu\u1ea9n %1
 ParallelLines=\u0110\u01b0\u1eddng th\u1eb3ng song song
@@ -313,16 +313,16 @@ ShowObject=Hi\u1ec3n th\u1ecb \u0111\u1ed1i t\u01b0\u1ee3ng
 ShowOnlyBreakpoints=Ch\u1ec9 hi\u1ec7n th\u1ecb \u0111i\u1ec3m ng\u1eaft
 ShowTrace=Hi\u1ec3n th\u1ecb d\u1ea5u v\u1ebft khi di chuy\u1ec3n
 Size=Kích th\u01b0\u1edbc
-Slider=Con tr\u01b0\u1ee3t
-SlopeOf=\u0110\u1ed9 d\u1ed1c c\u1ee7a
-SlopeOfA=\u0110\u1ed9 nghiêng c\u1ee7a %0
+Slider=Thanh tr\u01b0\u1ee3t
+SlopeOf=H\u1ec7 s\u1ed1 góc c\u1ee7a
+SlopeOfA=H\u1ec7 s\u1ed1 góc c\u1ee7a %0
 Speed=T\u1ed1c \u0111\u1ed9
 Spreadsheet=Hi\u1ec3n th\u1ecb Spreadsheet
 StandardObject=\u0110\u1ed1i t\u01b0\u1ee3ng tiêu chu\u1ea9n
 StandardView=Góc nhìn m\u1eb7c \u0111\u1ecbnh
 StartingPoint=\u0110i\u1ec3m b\u1eaft \u0111\u1ea7u
 Substitute=Thay th\u1ebf
-SubstituteSimplify=Thay th\u1ebf & rú g\u1ecdn
+SubstituteSimplify=Thay th\u1ebf & rút g\u1ecdn
 SyntaxErrorAisNotAList=L\u1ed7i cú pháp: %0 không ph\u1ea3i là danh sách
 TangentLine=Ti\u1ebfp tuy\u1ebfn
 TangentToAParallelToB=Ti\u1ebfp tuy\u1ebfn c\u1ee7a %0 song song v\u1edbi %1
@@ -346,13 +346,13 @@ Triangle=Hình tam giác
 TurningPoint=\u0110i\u1ec3m u\u1ed1n
 UnitOrthogonalVectorOf=Véct\u01a1 pháp tuy\u1ebfn \u0111\u01a1n v\u1ecb c\u1ee7a
 UnitVectorOf=Véct\u01a1 ch\u1ec9 ph\u01b0\u01a1ng \u0111\u01a1n v\u1ecb c\u1ee7a
-UnitVectorOfA=Véc-t\u01a1 \u0111\u01a1n v\u1ecb c\u1ee7a %0
-UnitVectorPerpendicularToA=Véc-t\u01a1 \u0111\u01a1n v\u1ecb vuông góc c\u1ee7a %0
+UnitVectorOfA=Véct\u01a1 \u0111\u01a1n v\u1ecb c\u1ee7a %0
+UnitVectorPerpendicularToA=Véct\u01a1 \u0111\u01a1n v\u1ecb vuông góc c\u1ee7a %0
 Up=Trên
 Value=Giá tr\u1ecb
-Vector=Véc-t\u01a1
-VectorPerpendicularToA=Véc-t\u01a1 vuông góc c\u1ee7a %0
-Vectors=Các véc-t\u01a1
+Vector=Véct\u01a1
+VectorPerpendicularToA=Véct\u01a1 vuông góc c\u1ee7a %0
+Vectors=Các véct\u01a1
 VertexOf=\u0110\u1ec9nh c\u1ee7a
 VertexOfA=\u0110\u1ec9nh c\u1ee7a %0
 ViewCloseExtraWindow=Hi\u1ec3n th\u1ecb trong c\u1eeda s\u1ed5 chính
@@ -366,9 +366,9 @@ ZoomIn=Phóng to
 ZoomOut=Thu nh\u1ecf
 allowOutlyingIntersections=L\u1ea5y giao \u0111i\u1ec3m \u1edf xa
 allowReflexAngle=Góc \u0111\u1ed1i x\u1ee9ng
-and=và
-around=t\u1eeb tâm
-as=thành d\u1ea1ng
+and=Và
+around=Vòng Quanh
+as=Thành d\u1ea1ng
 asymptoticLine=ti\u1ec7m c\u1eadn
 back=tr\u1edf l\u1ea1i
 by=theo
